--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "cleaning-service",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mixoor.github.io",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "framer-motion": "^6.3.11",
+    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
